TEST_PROGRAMS/INVALID_TYPECHECK/add_runeint.go
package main;

func main() {
    
    //this operation is allowed
    var c = 'g';
    var x = 5+c;
    print(x);
}
